common-monitoring/meshmon/deploy.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: meshmon
  namespace: meshmon
spec:
  revisionHistoryLimit: 3
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: meshmon
  template:
    metadata:
      labels:
        app.kubernetes.io/name: meshmon
    spec:
      containers:
        - name: meshmon
          image: ghcr.io/ripplefcl/meshmon:v4.0.0-beta.8
          ports:
            - containerPort: 8000
              name: http
            - containerPort: 42069
              name: meshmon-grpc
          livenessProbe:
            httpGet:
              path: /api/health
              port: http
          readinessProbe:
            httpGet:
              path: /api/health
              port: http
          volumeMounts:
            - name: config
              mountPath: /app/config/nodeconf.yml
              subPath: nodeconf.yml
            - name: config
              mountPath: /app/config/.private_keys/homelads/jens-${CLUSTER_NAME}.key
              subPath: key
            - name: data
              mountPath: /app/config
      volumes:
        - name: config
          secret:
            secretName: beryju-io-meshmon
        - name: data
          emptyDir: {}
