common-monitoring/meshmon/svc.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: meshmon
  namespace: meshmon
spec:
  ports:
    - name: http
      port: 8000
      protocol: TCP
      targetPort: 8000
    - name: meshmon-grpc
      port: 42069
      appProtocol: grpc
      targetPort: 42069
  selector:
    app.kubernetes.io/name: meshmon
  type: ClusterIP
