common-monitoring/meshmon/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: meshmon
  namespace: meshmon
spec:
  ingressClassName: istio
  rules:
    - host: meshmon.${CLUSTER_NAME}.k8s.beryju.io
      http:
        paths:
          - backend:
              service:
                name: meshmon
                port:
                  name: http
            path: /
            pathType: Prefix
    - host: meshmon-grpc.${CLUSTER_NAME}.k8s.beryju.io
      http:
        paths:
          - backend:
              service:
                name: meshmon
                port:
                  name: meshmon-grpc
            path: /
            pathType: Prefix
  tls:
    - hosts:
        - meshmon.${CLUSTER_NAME}.k8s.beryju.io
        - meshmon-grpc.${CLUSTER_NAME}.k8s.beryju.io
      secretName: beryjuio-meshmon
